# duna

./: .gitignore  README.md  board.py  pyproject.toml
.github/workflows/: pylint.yml
backend/: main.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: index.css
client/src/game/: types.ts
client/src/game/components/: Board.tsx  BoardCell.tsx  GameStatus.tsx
engine/: board.py  data_types.py
orm/: migration_scripts.md  tables.py
orm/dao/: users.py
orm/migration/: env.py
orm/migration/versions/: 649ba19e24e1_initial.py  8e63b35101bf_is_bot.py  c85e45a0d668_mapped_tables.py
server/: game_logger.py  ws_server.py
server/engine/: board.py  board_estimation.py  bot.py  coeff_selection.py  data_types.py  fields.py
server/engine/mcts/: __main__.py  board_estimation_cache.py  constants.py  evaluate_best_move.py  mcts.py  neo4j_client.py  neo4j_queries.py
ui/: package-lock.json  package.json  tsconfig.json
ui/public/: index.html
ui/src/: App.tsx  field.css  index.css  index.tsx
ui/src/board/: board.tsx  board_cell.tsx  types.ts.tsx
ui/src/game/: Game.tsx  WsClient.ts  game.tsx  types.ts
ui/src/game/components/: Board.tsx  BoardCell.tsx  GameStatus.tsx  board.tsx
