[tool.poetry]
name = "duna"
version = "0.1.0"
description = ""
authors = ["evgenius2020 <zavarzinevg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.5.post1"
websockets = "^10.4"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
alembic = "^1.10.1"
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
skip-string-normalization = true

[flake8]
max-line-length = 81
